--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <nav class="navbar" role="navigation">
                 <ul>
                     <li><a href='#home' class="home">Home</a></li>
-                    <li><a href="#taste" class="scotch">How To Taste</a></li>
-                    <li><a href="#islay" class="islay">Islay Distilleries</a></li>
-                    <li><a href='#me' class="me">About Me</a></li>
+                    <li><a href="#taste" class="scotch">Taste</a></li>
+                    <li><a href="#islay" class="islay">Islay</a></li>
+                    <li><a href='#me' class="me">About</a></li>
                 </ul>
             </nav>
             <a href="https://en.wikipedia.org/wiki/Islay" target="blank"><img class="logo" id="logo" src="./img/Logo.webp" alt="A small map of the Isle of Islay in a circle."></a>
@@ -104,14 +104,7 @@
                     <img class="Josh" src="./img/MeAtLagavulin.jpg" title="Me at Lagavulin in the Warehouse. Also pictured is Lagavulin Warehouse Manager Iain McArthur." alt="A picture of me in a warehouse pulling whisky directly from the cask.">
                     <figcaption>There's nothing like drinking whisky from the cask.</figcaption>
                 </figure>
-                <p>Please fill out and submit your Name and Email below to sign up.</p>
-                <form> 
-                    <label for="yourname">Your Name:</label>
-                    <input type="text" id="yourname" name="yourname"><br>
-                    <label for="useremail">Your Email:</label>
-                    <input type="email" id="useremail" name="useremail"><br><br>
-                    <input type="submit" value="Submit"><br><br>
-                </form>
+
                 <a href='#top'>Back to top</a>
             </section>
 
